# devops_apps--deploy_projects_documentation

./: .safety-policy.yml  Makefile  README.md  SAST_for_MavenJava.md  SAST_for_ServerlessPython.md  SAST_for_Typescript.md  checkstyle.xml  pyproject.toml
